bug: tweak header padding on mobile

--- a/src/home/styles.scss
+++ b/src/home/styles.scss
@@ -11,7 +11,7 @@
   $tablet-breakpoint: 1050px;
 
   @media(max-width: $mobile-breakpoint) {
-    padding-top: 100px;
+    padding-top: 70px;
   }
 
   @media (max-width: $tablet-breakpoint) {
